# cats-and-dogs-classification

./: .gitignore  LICENSE  README.md  config.json  environment.yml  get_dataset.sh  install_environment.sh  pyproject.toml  run_all.sh  run_all_models.sh  run_all_preprocessing.sh  run_breeds.sh  run_cat_breeds.sh  run_dog_breeds.sh  run_species.sh  setup.cfg  update_docs.sh  update_git_pull.sh  update_git_push.sh
breeds/: build_dataset.py  build_model.py  train.py
config/: create_initial_config.py
docs/: Makefile  conf.py
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
results/breeds/: 4layers__Epoch__ 20__LR__0.01.txt  4layers__Epoch__ 25__LR__0.001.txt  breeds__Epoch__ 20__LR__0.01.txt  model__breeds__Epoch__ 32__LR__0.01.txt
results/cats/: model__cats__Epoch__ 32__LR__0.01.txt
results/dogs/: 4layers__Epoch__ 200__LR__0.01.txt  4layers__Epoch__ 20__LR__0.01.txt  4layers__Epoch__ 25__LR__0.001.txt  4layers__Epoch__ 25__LR__0.01.txt  4layers__Epoch__ 32__LR__0.01.txt  4layers__Epoch__ 64__LR__0.01.txt  model__dogs__Epoch__ 20__LR__0.01.txt  model__dogs__Epoch__ 32__LR__0.01.txt
results/plus/: Matriz de Confusão.xlsx
results/species/: 4layers__Epoch__ 25__LR__0.001.txt  build_model__Epoch__ 20__LR__0.01.txt  build_model__Epoch__ 25__LR__0.001.txt  build_model__Epoch__ 25__LR__0.01.txt  model__species__Epoch__ 16__LR__0.01.txt  (+3 more)
scripts/: get_dataset.sh
src/breeds/: build_model.py  (+1 more)
utils/: clean_project.sh  config.py  data_augmentation.py  get_dataset.sh  install_environment.sh  logger.py  update_environment.sh
(+24 files in other folders)
